# mcp-shield

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml
examples/: .mcp.json  claude_desktop_config.json  echo_server.py  mcp-shield.yaml  policy_server.py
src/mcp_shield/: __init__.py  audit.py  cli.py  discovery.py  gateway.py  policy.py  providers.py  scanner.py
src/mcp_shield/patterns/: default_patterns.yaml
tests/: test_audit.py  test_discovery.py  test_gateway.py  test_patterns.py  test_policy.py  test_providers.py  test_scanner.py
